@@ -1,5 +1,5 @@
 Package: bootsetup
-Version: 1.0.4
+Version: 1.1.0
 Section: admin
 Priority: optional
 Architecture: all
