@@ -1,7 +1,12 @@
 bootsetup (1.1.0)
+
+  * Added Wi-Fi config script for NetworkManager
+  * Added WireGuard config script
+  * Added nftables config script
   * Added config scripts which can be run every time
   * Changed locking mechanism
   * *bootfs* partition default path was changed to `/boot/firmware` mount (according to RPi)
+  * Added *network-online.target* as requirement for executing init scripts (so nmcli can be used)
 
  -- Martin Dagarin <martin.dagarin@gmail.com>  2025-02-05
 
